# fit-scraper

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: contract-tests.yml  e2e-tests.yml  integration-tests.yml  lint.yml  security-code.yml  test-and-release-gates.yml  type-check.yml  unit-tests.yml
fit_scraper/: scraper.py  test.py
fit_scraper/lang/: __init__.py  en.json  it.json
tests/contract/: test_scraper_contract.py
tests/e2e/: test_scraper_e2e.py
tests/integration/: test_scraper_integration.py
tests/unit/: test_lang.py  test_main.py  test_scraper.py
