[tool.poetry]
name = "fit-scraper"
version = "1.0.0"
description = "FIT Scraper Module"
authors = ["FIT Project"]
license = "LGPL-3.0-or-later"
packages = [
    { include = "fit_scraper" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
PySide6 = "6.9.0"


fit-acquisition = {git = "https://github.com/fit-project/fit-acquisition.git", tag = "v1.0.0-rc1"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast unit tests",
    "contract: contract tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
]
