[tool.poetry]
name = "fit-scraper"
version = "1.0.0-rc1"
description = "FIT Scraper Module"
authors = ["FIT Project"]
license = "LGPL-3.0-or-later"
packages = [
    { include = "fit_scraper" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
PySide6 = "6.9.0"


fit-acquisition = {git = "https://github.com/fit-project/fit-acquisition.git", branch = "main"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
pythonpath = ["."]
markers = [
    "unit: fast isolated tests",
    "contract: cross-module contract tests for public interfaces and integrations",
    "integration: integration tests with real external resources and dependencies",
    "e2e: end-to-end UI workflow tests",
]

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
files = ["fit_scraper", "main.py"]

[[tool.mypy.overrides]]
module = [
    "fit_acquisition.*",
    "fit_cases.*",
    "fit_common.*",
    "fit_configurations.*",
    "PySide6.*",
]
ignore_missing_imports = true
